# xiyoulinux-kvcache-optimizer

./: .gitignore  LICENSE  LICENSE-docs  README.md  needlebench_en_haystack.jsonl  run_baseline_v2.sh  初赛PPT.pptx  设计开发文档.md
miniflex/: bench_full.py  bench_mixed.py  bench_overflow.py  bench_ttft.py  compare3.py  demo.sh  pyproject.toml  run_vllm_miniflex.sh  setup.py
miniflex/csrc/: bindings.cpp  ssd_io_uring.cpp  ssd_io_uring.h  transfer.cu  transfer.cuh
miniflex/docs/: project_structure.md  test_overview.md  usage.md  validation.md
miniflex/docs/notes/: mempool.md  radix_tree.md
miniflex/pysrc/miniflex/: kvtask.py  transfer_manager.py
miniflex/pysrc/miniflex/cache/: cache_engine.py  global_cache_engine.py  mempool.py  radix_tree.py
miniflex/pysrc/miniflex/common/: block.py  config.py  hash.py  memory_handle.py  metrics.py  request.py  ring_buffer.py  storage.py  transfer.py
miniflex/pysrc/miniflex/integration/: config.py
miniflex/pysrc/miniflex/server/: client.py  request.py  utils.py
miniflex/pysrc/miniflex/storage/: allocator.py  storage_engine.py
miniflex/pysrc/miniflex/transfer/: scheduler.py  transfer_engine.py  worker.py
miniflex/test/: GPUCPUTransferWorker_test.py  block_test.py  cache_engine_test.py  global_cache_engine_test.py  hash_test.py  kvtask_test.py  mempool_test.py  radix_tree_test.py  ring_buffer_test.py  scheduler_test.py  ssd_cpu_worker_test.py  ssd_io_uring_test.cpp  storage_engine_test.py  storage_test.py  transfer_engine_test.py  transfer_manager_test.py  transfer_test.py  vllm_v1_adapter_test.py  worker_test.py
(+45 files in other folders)
